--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -3,6 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="ElectronicDiary.MainWindow"
         Title="Electronic diary" Height="483.052" Width="972.662">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FF3A3838"/>
+            <GradientStop Color="#FF595555" Offset="1"/>
+            <GradientStop Color="#FF636363"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
         <Label x:Name="StatusBar" Content="Administration panel" HorizontalAlignment="Left" Margin="0,421,0,0" VerticalAlignment="Top" Height="32" Width="945"/>
         <Grid x:Name="Admin" HorizontalAlignment="Left" Height="443" VerticalAlignment="Top" Width="955" Margin="0,10,0,0" d:IsHidden="True">
@@ -187,7 +194,7 @@
                 </Grid>
             </Grid>
         </Grid>
-        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965" d:IsHidden="True">
+        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965">
             <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" d:IsHidden="True">
                 <DataGrid x:Name="TeacherMarkSetter" HorizontalAlignment="Left" Margin="278,53,0,0" VerticalAlignment="Top" Height="344" Width="376" AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="AddMarks" >
                     <DataGrid.Columns>
@@ -207,8 +214,26 @@
             </Grid>
             <Grid x:Name="Student" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" Margin="0,0,-865,-352">
                 <TabControl HorizontalAlignment="Left" Height="432" Margin="0,10,0,0" VerticalAlignment="Top" Width="955">
+                    <TabControl.Background>
+                        <RadialGradientBrush GradientOrigin="0,0" RadiusY="0.8" RadiusX="0.8">
+                            <GradientStop Color="#FF222222" Offset="1"/>
+                            <GradientStop Color="#FF4E4E4C" Offset="0"/>
+                            <GradientStop Color="#FF393938" Offset="0.594"/>
+                            <GradientStop Color="#FF373736" Offset="0.247"/>
+                        </RadialGradientBrush>
+                    </TabControl.Background>
                     <TabItem Header="Schedule">
-                        <Grid Background="#FFE5E5E5">
+                        <Grid>
+                            <Grid.Background>
+                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                    <GradientStop Color="Black" Offset="0"/>
+                                    <GradientStop Color="White"/>
+                                    <GradientStop Color="#FF7C7C7C" Offset="0.011"/>
+                                    <GradientStop Color="#FFDEDEDE"/>
+                                    <GradientStop Color="Black" Offset="1"/>
+                                    <GradientStop Color="#FF9E9E9E"/>
+                                </LinearGradientBrush>
+                            </Grid.Background>
                             <DataGrid x:Name="StudentSchedule" HorizontalAlignment="Left" Margin="89,45,0,0" VerticalAlignment="Top" Height="316" Width="525" CanUserAddRows="False"/>
                             <Calendar x:Name="StudentCalendar" HorizontalAlignment="Left" Margin="631,42,0,0" VerticalAlignment="Top" SelectedDatesChanged="ShowSchedule" Loaded="displaySchedule" d:IsHidden="True"/>
                             <ComboBox x:Name="StudentGroupList" HorizontalAlignment="Left" Margin="332,18,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="GroupSelected" d:IsHidden="True" />
@@ -216,7 +241,15 @@
                         </Grid>
                     </TabItem>
                     <TabItem Header="Marks">
-                        <Grid Background="#FFE5E5E5">
+                        <Grid>
+                            <Grid.Background>
+                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                    <GradientStop Color="Black" Offset="0"/>
+                                    <GradientStop Color="White"/>
+                                    <GradientStop Color="#FF131313"/>
+                                    <GradientStop Color="#FF717171" Offset="0.982"/>
+                                </LinearGradientBrush>
+                            </Grid.Background>
                             <ComboBox x:Name="SubjectList" HorizontalAlignment="Left" Margin="409,25,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ShowSubjects"/>
                             <DataGrid x:Name="StudentMarkTable" HorizontalAlignment="Left" Margin="280,52,0,0" VerticalAlignment="Top" Height="252" Width="380" CanUserAddRows="False" />
                         </Grid>
@@ -231,8 +264,8 @@
         <Grid x:Name="Logining" Margin="0,0,-409,-83" d:IsHidden="True">
 
             <TextBox x:Name="Login" HorizontalAlignment="Left" Height="30" Margin="459,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152" TabIndex="1"/>
-            <Button Content="Войти" HorizontalAlignment="Left" Margin="415,287,0,0" VerticalAlignment="Top" Width="136" Height="45" FontSize="20"  TabIndex="3" Click="Entering"/>
-            <Label Content="Добро пожаловать" HorizontalAlignment="Left" Margin="306,85,0,0" VerticalAlignment="Top" Height="66" Width="364" TextOptions.TextFormattingMode="Display" FontFamily="Wide Latin" FontSize="38" FontStyle="Italic"/>
+            <Button Content="Sign in" HorizontalAlignment="Left" Margin="415,287,0,0" VerticalAlignment="Top" Width="136" Height="45" FontSize="20"  TabIndex="3" Click="Entering"/>
+            <Label Content="Welcome" HorizontalAlignment="Left" Margin="286,85,0,0" VerticalAlignment="Top" Height="66" Width="364" TextOptions.TextFormattingMode="Display" FontFamily="Wide Latin" FontSize="38" FontStyle="Italic" HorizontalContentAlignment="Center"/>
             <Label Content="Login" HorizontalAlignment="Left" Margin="344,176,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.231" FontSize="20" FontFamily="Cooper Black"/>
             <Label Content="Password" HorizontalAlignment="Left" Margin="344,234,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.231" FontSize="20" FontFamily="Cooper Black"/>
             <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="459,234,0,0" VerticalAlignment="Top" Width="152" Height="30" TabIndex="2"/>
