--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -5,8 +5,8 @@
         Title="Electronic diary" Height="483.052" Width="972.662">
     <Grid Height="453" VerticalAlignment="Top">
         <Grid x:Name="Exit" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965">
-            <Button Content="Logout" HorizontalAlignment="Left" Margin="832,10,0,0" VerticalAlignment="Top" Width="123" Click="logout" Height="40"/>
-            <Label x:Name="UserName" Content="" Margin="578,10,0,0" VerticalAlignment="Top" Width="249" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Background="White" Height="40" FontSize="16"/>
+            <Button Content="Logout" HorizontalAlignment="Left" Margin="876,10,0,0" VerticalAlignment="Top" Width="79" Click="logout" Height="40"/>
+            <Label x:Name="UserName" Content="" Margin="622,10,0,0" VerticalAlignment="Top" Width="249" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Background="White" Height="40" FontSize="16"/>
         </Grid>
         <Label x:Name="StatusBar" Content="Administration panel" HorizontalAlignment="Left" Margin="0,421,0,0" VerticalAlignment="Top" Height="32" Width="945" d:IsHidden="True"/>
         <Grid x:Name="Admin" HorizontalAlignment="Left" Height="411" VerticalAlignment="Top" Width="955" Margin="0,10,0,0" d:IsHidden="True">
@@ -201,9 +201,9 @@
                 </Grid>
             </Grid>
         </Grid>
-        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965" d:IsHidden="True">
-            <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" d:IsHidden="True">
-                <DataGrid x:Name="TeacherMarkSetter" HorizontalAlignment="Left" Margin="278,53,0,0" VerticalAlignment="Top" Height="344" Width="376" AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="AddMarks" d:IsHidden="True" >
+        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965">
+            <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965">
+                <DataGrid x:Name="TeacherMarkSetter" HorizontalAlignment="Left" Margin="278,53,0,0" VerticalAlignment="Top" Height="302" Width="376" AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="AddMarks" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Name" 
                              Binding="{Binding Path=StudentName,UpdateSourceTrigger=PropertyChanged}"/>
@@ -214,18 +214,18 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <Calendar x:Name="TeacherCalendar" HorizontalAlignment="Left" Margin="758,48,0,0" VerticalAlignment="Top" SelectedDatesChanged="ShowTeacherSchedule" Loaded="ShowTeacherSchedule"/>
-                <DataGrid x:Name="TeacherSchedule" HorizontalAlignment="Left" Margin="58,46,0,0" VerticalAlignment="Top" Height="367" Width="672" SelectionChanged="SelectedRow"/>
-                <Button x:Name="BackToTeacherScheduleButton" Content="Back" Margin="434,418,456,12" Click="BackToTeacherSchedule" Visibility="Hidden" d:IsHidden="True"/>
+                <DataGrid x:Name="TeacherSchedule" HorizontalAlignment="Left" Margin="58,46,0,0" VerticalAlignment="Top" Height="332" Width="672" SelectionChanged="SelectedRow"/>
+                <Button x:Name="BackToTeacherScheduleButton" Content="Back" Margin="434,300,456,12" Click="BackToTeacherSchedule" Visibility="Hidden"/>
                 <Button x:Name="SetMarksButton" HorizontalAlignment="Left" Margin="800,250,0,0" VerticalAlignment="Top" Width="96" Click="SetMarks" Height="25" Content="Set marks"/>
             </Grid>
-            <Grid x:Name="Student" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" Margin="0,0,-865,-352">
-                <TabControl HorizontalAlignment="Left" Height="432" Margin="0,10,0,0" VerticalAlignment="Top" Width="955">
+            <Grid x:Name="Student" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" Margin="0,0,-865,-352" d:IsHidden="True">
+                <TabControl HorizontalAlignment="Left" Height="410" Margin="0,32,0,0" VerticalAlignment="Top" Width="955" d:IsHidden="True">
                     <TabItem Header="Schedule">
-                        <Grid Background="White">
-                            <DataGrid x:Name="StudentSchedule" HorizontalAlignment="Left" Margin="34,53,0,0" VerticalAlignment="Top" Height="316" Width="524"/>
-                            <Calendar x:Name="StudentCalendar" HorizontalAlignment="Left" Margin="631,42,0,0" VerticalAlignment="Top" SelectedDatesChanged="ShowSchedule" Loaded="displaySchedule"/>
-                            <ComboBox x:Name="StudentGroupList" HorizontalAlignment="Left" Margin="699,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="GroupSelected"/>
-                            <Label Content="Group:" HorizontalAlignment="Left" Margin="631,10,0,0" VerticalAlignment="Top" Width="68"/>
+                        <Grid Background="White" Margin="0,-5,0,0">
+                            <DataGrid x:Name="StudentSchedule" HorizontalAlignment="Left" Margin="34,10,0,0" VerticalAlignment="Top" Height="316" Width="524"/>
+                            <Calendar x:Name="StudentCalendar" HorizontalAlignment="Left" Margin="660,98,0,0" VerticalAlignment="Top" SelectedDatesChanged="ShowSchedule" Loaded="displaySchedule"/>
+                            <ComboBox x:Name="StudentGroupList" HorizontalAlignment="Left" Margin="660,43,0,0" VerticalAlignment="Top" Width="179" SelectionChanged="GroupSelected"/>
+                            <Label Content="Group:" HorizontalAlignment="Left" Margin="660,10,0,0" VerticalAlignment="Top" Width="68"/>
                         </Grid>
                     </TabItem>
                     <TabItem Header="Marks">
