--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -9,7 +9,7 @@
             <Label x:Name="UserName" Content="" Margin="622,10,0,0" VerticalAlignment="Top" Width="249" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Background="White" Height="40" FontSize="16"/>
         </Grid>
         <Label x:Name="StatusBar" Content="Administration panel" HorizontalAlignment="Left" Margin="0,421,0,0" VerticalAlignment="Top" Height="32" Width="945" d:IsHidden="True"/>
-        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="411" VerticalAlignment="Top" Width="955" Margin="0,10,0,0" d:IsHidden="True">
+        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="411" VerticalAlignment="Top" Width="955" Margin="0,10,0,0">
             <ComboBox x:Name="AdminComboBox" HorizontalAlignment="Left" Margin="172,10,0,0" VerticalAlignment="Top" Width="206" SelectedIndex="0" SelectionChanged="AdminComboBox_SelectionChanged"/>
             <DataGrid x:Name="AdminDataGrid" HorizontalAlignment="Left" Margin="26,62,0,0" VerticalAlignment="Top" Height="332" Width="504"/>
             <Label x:Name="AdminColName" Content="Name" Margin="596,1,153,0" VerticalAlignment="Top" FontSize="22" Width="206" HorizontalAlignment="Center"/>
@@ -131,14 +131,14 @@
                 <Button x:Name="AdminPanelSchedulesRemoveSchedule" Content="Remove lesson" HorizontalAlignment="Left" Margin="82,188,0,0" VerticalAlignment="Top" Width="210" Height="51" Click="AdminPanelSchedulesRemoveSchedule_Click"/>
                 <Button x:Name="AdminPanelSchedulesAddSchedule" Content="Add lesson" HorizontalAlignment="Left" Margin="82,10,0,0" VerticalAlignment="Top" Width="210" Height="51" Click="AdminPanelSchedulesAddSchedule_Click"/>
             </Grid>
-            <Grid x:Name="AdminSchedulesPanel" HorizontalAlignment="Left" Height="349" Margin="558,62,0,0" VerticalAlignment="Top" Width="387" d:IsHidden="True">
+            <Grid x:Name="AdminSchedulesPanel" HorizontalAlignment="Left" Height="349" Margin="558,62,0,0" VerticalAlignment="Top" Width="387">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="95*"/>
                     <ColumnDefinition Width="10*"/>
                     <ColumnDefinition Width="213*"/>
                     <ColumnDefinition Width="69*"/>
                 </Grid.ColumnDefinitions>
-                <Label HorizontalAlignment="Left" Margin="53,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.305,0.471" Content="Group:" Height="28" Width="50" Grid.ColumnSpan="2">
+                <Label HorizontalAlignment="Left" Margin="47,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.305,0.471" Content="Group:" Height="28" Width="50" Grid.ColumnSpan="2">
                     <Label.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -148,25 +148,32 @@
                         </TransformGroup>
                     </Label.RenderTransform>
                 </Label>
-                <ComboBox x:Name="AdminPanelScheduleGroupCombobox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="212" SelectionChanged="AdminPanelScheduleGroupCombobox_SelectionChanged" Grid.Column="2" Margin="0,3,0,0" Height="30"/>
-                <Grid x:Name="EditScheduleButtonsForm" HorizontalAlignment="Left" Height="129" Margin="5,43,0,0" VerticalAlignment="Top" Width="312" d:IsHidden="True" Grid.ColumnSpan="3">
+                <ComboBox x:Name="AdminPanelScheduleGroupCombobox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="222" SelectionChanged="AdminPanelScheduleGroupCombobox_SelectionChanged" Grid.Column="1" Height="30" Grid.ColumnSpan="2"/>
+                <Grid x:Name="EditScheduleButtonsForm" HorizontalAlignment="Left" Height="129" Margin="5,43,0,0" VerticalAlignment="Top" Width="312" Grid.ColumnSpan="3" d:IsHidden="True">
                     <Button x:Name="EditScheduleButtonBackPanel" Content="Back" HorizontalAlignment="Left" Margin="147,29,0,0" VerticalAlignment="Top" Width="75" Click="EditScheduleButtonBackPanel_Click"/>
                 </Grid>
-                <Grid x:Name="EditScheduleForm" HorizontalAlignment="Left" Height="258" VerticalAlignment="Top" Width="312" Margin="5,38,0,0" d:IsHidden="True" Grid.ColumnSpan="3">
-                    <TextBox x:Name="AdminScheduleEditTextBox" HorizontalAlignment="Left" Height="22" Margin="104,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                    <Label Content="Lesson number:" HorizontalAlignment="Left" Margin="11,18,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Subject:" HorizontalAlignment="Left" Margin="52,124,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="AdminPanelEditScheduleSubjectCombobox" HorizontalAlignment="Left" Margin="104,128,0,0" VerticalAlignment="Top" Width="168"/>
-                    <Label Content="Teacher:" HorizontalAlignment="Left" Margin="50,86,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="AdminPanelEditScheduleTeacherCombobox" HorizontalAlignment="Left" Margin="104,90,0,0" VerticalAlignment="Top" Width="168"/>
-                    <Label Content="Week day:" HorizontalAlignment="Left" Margin="39,49,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="AdminPanelEditScheduleWeekDayCombobox" HorizontalAlignment="Left" Margin="104,53,0,0" VerticalAlignment="Top" Width="168"/>
-                    <Button x:Name="EditScheduleButtonBack" Content="Back" HorizontalAlignment="Left" Margin="104,202,0,0" VerticalAlignment="Top" Width="71" Click="EditScheduleButtonBack_Click"/>
-                    <Button x:Name="EditScheduleButtonSave" Content="Save" HorizontalAlignment="Left" Margin="201,202,0,0" VerticalAlignment="Top" Width="71" Click="EditScheduleButtonSave_Click"/>
-                    <TextBox x:Name="AdminScheduleEditDescriptionTextBox" HorizontalAlignment="Left" Height="22" Margin="104,161,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                    <Label Content="Description:" HorizontalAlignment="Left" Margin="31,157,0,0" VerticalAlignment="Top"/>
+                <Grid x:Name="EditScheduleForm" HorizontalAlignment="Left" Height="311" VerticalAlignment="Top" Width="400" Margin="-13,38,0,0" Grid.ColumnSpan="4">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="108*"/>
+                        <ColumnDefinition Width="221*"/>
+                        <ColumnDefinition Width="71*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="AdminScheduleEditTextBox" HorizontalAlignment="Left" Height="22" TextWrapping="Wrap" VerticalAlignment="Top" Width="221" Grid.Column="1" Margin="0,43,0,0"/>
+                    <Label Content="Lesson number:" HorizontalAlignment="Left" Margin="6,45,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Subject:" HorizontalAlignment="Left" Margin="49,194,0,0" VerticalAlignment="Top"/>
+                    <ComboBox x:Name="AdminPanelEditScheduleSubjectCombobox" HorizontalAlignment="Left" Margin="0,192,0,0" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
+                    <Label Content="Teacher:" HorizontalAlignment="Left" Margin="49,146,0,0" VerticalAlignment="Top"/>
+                    <ComboBox x:Name="AdminPanelEditScheduleTeacherCombobox" HorizontalAlignment="Left" Margin="0,144,0,0" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
+                    <Label Content="Week day:" HorizontalAlignment="Left" Margin="37,94,0,0" VerticalAlignment="Top"/>
+                    <ComboBox x:Name="AdminPanelEditScheduleWeekDayCombobox" HorizontalAlignment="Left" Margin="0,92,0,0" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
+                    <Button x:Name="EditScheduleButtonBack" Content="Back" HorizontalAlignment="Left" Margin="0,281,0,0" VerticalAlignment="Top" Width="99" Click="EditScheduleButtonBack_Click" Grid.Column="1"/>
+                    <Button x:Name="EditScheduleButtonSave" Content="Save" HorizontalAlignment="Left" Margin="122,281,0,0" VerticalAlignment="Top" Width="99" Click="EditScheduleButtonSave_Click" Grid.Column="1"/>
+                    <TextBox x:Name="AdminScheduleEditDescriptionTextBox" HorizontalAlignment="Left" Height="22" Margin="0,239,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
+                    <Label Content="Description:" HorizontalAlignment="Left" Margin="28,239,0,0" VerticalAlignment="Top"/>
+                    <ComboBox x:Name="EditScheduleLessonIdCombobox" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" SelectionChanged="EditScheduleLessonIdCombobox_SelectionChanged"/>
+                    <Label Content="Lesson Id:" HorizontalAlignment="Left" Margin="37,2,0,0" VerticalAlignment="Top"/>
                 </Grid>
-                <Grid x:Name="AddScheduleForm" HorizontalAlignment="Left" Height="301" Margin="0,38,0,0" VerticalAlignment="Top" Width="368" Grid.ColumnSpan="4">
+                <Grid x:Name="AddScheduleForm" HorizontalAlignment="Left" Height="301" Margin="0,38,0,0" VerticalAlignment="Top" Width="368" Grid.ColumnSpan="4" d:IsHidden="True">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="105*"/>
                         <ColumnDefinition Width="213*"/>
@@ -201,8 +208,8 @@
                 </Grid>
             </Grid>
         </Grid>
-        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965">
-            <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965">
+        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965" d:IsHidden="True">
+            <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" d:IsHidden="True">
                 <DataGrid x:Name="TeacherMarkSetter" HorizontalAlignment="Left" Margin="278,53,0,0" VerticalAlignment="Top" Height="302" Width="376" AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="AddMarks" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Name" 
